# dropbear_gazebo

./: LICENSE  README.md  setup_workspace.sh
battery/: CMakeLists.txt  package.xml
battery/launch/: robot_description.launch.py
battery/urdf/: humanoidbatteryassembly.trans  humanoidbatteryassembly.xacro  materials.xacro
dropbear_granular_urdf/: package.xml  patch_range.py
dropbear_granular_urdf/launch/: dropbear_display.launch.py  dropbear_gazebo.launch.py
dropbear_granular_urdf/meshes/head/: 00_top_lvl_p3737_01142022_1.stl.nanodlp-simplified.stlZone.Identifier
dropbear_granular_urdf/urdf/: dropbear.urdf  dropbear.urdf.xacro  dropbear_copy.urdf  materials.xacro
dropbear_granular_urdf/urdf/ros2_control/: dropbear.ros2_control.xacro
head/: CMakeLists.txt  package.xml
head/launch/: robot_description.launch.py
head/urdf/: humanoidhead.trans  humanoidhead.xacro  materials.xacro
pelvis/: CMakeLists.txt  package.xml
pelvis/launch/: robot_description.launch.py
pelvis/urdf/: humanoidpelvicgirdle.trans  humanoidpelvicgirdle.xacro  materials.xacro
right_arm/: CMakeLists.txt  package.xml
right_arm/launch/: robot_description.launch.py
right_arm/urdf/: humanoidrightarm.trans  humanoidrightarm.xacro  materials.xacro
right_leg/: CMakeLists.txt  package.xml
right_leg/launch/: robot_description.launch.py
right_leg/urdf/: humanoidrightleg.trans  humanoidrightleg.xacro  materials.xacro
torso/: CMakeLists.txt  package.xml
torso/launch/: robot_description.launch.py
torso/urdf/: humanoidtorso.trans  humanoidtorso.xacro  materials.xacro
