<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>right_arm</name>
  <version>0.0.0</version>
<description>Right arm component package for the Dropbear humanoid robot with shoulder, elbow, and wrist control.</description>
  <maintainer email="ppareek85@gmail.com">Priyanshupareek</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>urdf</depend>
  <depend>ros2_launch</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
